# template-python-package

./: 404.html  LICENSE  README.md  README.qmd  index.html  mkdocs.yaml  pyproject.toml  sitemap.xml
.github/workflows/: readme.yaml
contributing/: index.html
docs/: README.qmd  contributing.md  index.md
docs/stylesheets/: style.css
examples/: index.html
overrides/partials/: footer.html
package_name/: __init__.py
reference/add_digit/: index.html
scripts/: coverage.sh
search/: search_index.json
stylesheets/: style.css
tests/: test_main.py
