[project]
name = "package_name"
description = "Description"
version = "0.1.0"
license = "MIT"
license-files = ["LICENSE"]
keywords = ["a", "list", "of", "keywords"]
authors = [
  { name="your_name", email="your_name@mail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha"
]
dependencies = []

[build-system]
requires = [
    "setuptools",
    "setuptools-scm",
]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["package_name"]

[tool.uv.sources]
package_name = { workspace = true }

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "ruff>=0.11.13",
    "mkdocs-material>=9.6.9",
    "mkdocstrings-python>=1.16.5",
    "coverage>=7.9.1",
    "genbadge>=1.1.2",
]
quarto = [
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbformat>=5.10.4",
    "pyyaml>=6.0.2",
]

[project.urls]
Homepage = "https://your_name.github.io/package_name/"
Issues = "https://github.com/your_name/package_name/issues"
Documentation = "https://your_name.github.io/package_name/"
Repository = "https://github.com/your_name/package_name"
